# YOKAI-0.1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: Linux.yml  Windows.yml  cmake.yml  macOS.yml
ICT397 Engine/: ICT397 Engine.sln
ICT397 Engine/ICT397 Engine/: EntityManager.h  ICT397 Engine.vcxproj  ICT397 Engine.vcxproj.filters
content/.github/workflows/: Linux.yml  Windows.yml
content/Models/: CAR.fbx  Materials  greenarms.mtl  gun.gltf  gunPaths.txt  gun_000001.mtl  gun_000012.mtl  gun_000015.mtl  guntest.txt  laySheary.gltf  pine (1).fbx  rock.fbx  skybox.fbx  skybox1.fbx  test.fbx  test2.glb  tree.fbx  tris.md2  untitled.mtl  water.gltf  weapon.gltf  zombie.fbx  zombieAnim.gltf  zombieAnimation1.fbx
content/Models/Zombie/: ZombieSmooth.gltf  ZombieSmoothold.gltf
content/Models/animatedZombie/: keyframes.txt  laySheary.blend1  laySheary_000001.mtl
content/Models/broom/: test.fbx
content/Models/gun/: carbine_000077.mtl
content/Models/gun/weapon/: scene.gltf
content/Models/test/: AnimatedHuman.gltf
content/Scripts/: assets.lua  createObjects.lua  createUI.lua  enemyCount.lua  gameLoop.lua  gunLogic.lua  playerLogic.lua  stateMachine.lua  terrainConfig.lua  uiLogic.lua
content/Shaders/: fragmentShader.frag  splashFragment.frag  terrainFragment.frag  terrainVertex.vert  testShader.frag  vertexShader.vert
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
lib/lua/: CMakeLists.txt
src/: CMakeLists.txt  EntityManager.cpp  Shader.cpp  Shader.hpp  main.cpp  stb_image.h  vertexShader.vert
src/Controller/: Animator.cpp  Animator.hpp  DemoScene.cpp  DemoScene.hpp  EventManager.cpp  EventManager.h  EventManager.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameStack.cpp  GameStack.hpp  InputManagerGLFW.cpp  InputManagerGLFW.hpp  KeyframeAnimation.cpp  KeyframeAnimation.hpp  Layer.cpp  Layer.hpp  LuaManager.cpp  LuaManager.hpp  LuaTypes.cpp  LuaTypes.hpp  MainMenuScene.cpp  MainMenuScene.hpp  ModelManager.cpp  ModelManager.hpp  RenderLayer.cpp  RenderLayer.hpp  SceneManager.cpp  SceneManager.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  TerrainManager.cpp  TerrainManager.hpp  TextureManager.cpp  TextureManager.hpp  UIManager.cpp  UIManager.hpp  Yokai.cpp  Yokai.hpp  unnamedEngine.cpp  (+1 more)
src/Controller/Factory/: Asset.h  GameAssetFactory.cpp  GameAssetFactory.hpp  TerrainFactory.cpp  TerrainFactory.hpp
src/Controller/Physics/: AABB.cpp  AABB.hpp  CollisionEventHandler.cpp  CollisionEventHandler.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  ReactBoxShape.cpp  ReactBoxShape.hpp  ReactMath.cpp  ReactMath.hpp  ReactShape.cpp  ReactShape.hpp  ReactSphereShape.cpp  ReactSphereShape.hpp  ReactTerrainShape.cpp  ReactTerrainShape.hpp  RigidBody.cpp  RigidBody.hpp  YourEventListener.cpp  YourEventListener.hpp
src/Controller/Physics/Shapes/: ReactBoxShape.cpp  ReactBoxShape.hpp  ReactShape.hpp  ReactSphereShape.cpp  ReactSphereShape.hpp  ReactTerrainShape.cpp  ReactTerrainShape.hpp
src/ECS/: System.h
src/Model/: Animation.cpp  Animation.hpp  Chunk.cpp  Chunk.hpp  Entity.cpp  Entity.hpp  GameObject.cpp  GameObject.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  NPC.cpp  NPC.hpp  Player.cpp  Player.hpp  PlayerControlledMotion.cpp  PlayerControlledMotion.hpp  SkeletalAnimation.cpp  SkeletalAnimation.hpp  SplashScreen.cpp  SplashScreen.hpp  StaticObject.cpp  StaticObject.hpp  Transform.cpp  Transform.hpp  Weapon.cpp  Weapon.hpp
src/Model/Components/: AutomatedBehaviours.cpp  AutomatedBehaviours.hpp  Camera.cpp  Camera.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PlayerControlledMotion.cpp  PlayerControlledMotion.hpp  RayCaster.cpp  RayCaster.hpp  Transform.cpp  Transform.hpp  Weapon.cpp  Weapon.hpp
src/Model/GameObjects/: GameObject.cpp  GameObject.hpp  NPC.cpp  NPC.hpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  StaticObject.cpp  StaticObject.hpp
src/Model/ObjectLoading/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp
src/ObjectLoading/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp
src/Renderer/: Camera.cpp  Camera.hpp  OpenGL.cpp  Renderer.hpp  Shader.hpp
src/Test/: NewPhysicsSystem.cpp  NewPhysicsSystem.hpp  PhysicsManager2.cpp  PhysicsManager2.hpp  ReactTerrainShape.cpp  ReactTerrainShape.hpp  YourEventListener.cpp  YourEventListener.hpp
src/View/: Camera.cpp  Camera.hpp  Window.cpp  Window.hpp
src/View/Renderer/: AssimpMaths.cpp  AssimpMaths.hpp  DataTypes.cpp  DataTypes.hpp  OpenGL.cpp  OpenGL.hpp  RenderAPI.cpp  RenderAPI.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/View/Renderer/OpenGL/: FileIO.cpp  FileIO.hpp  OpenGLDataTypes.cpp  OpenGLDataTypes.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp
